GH-1078: Upgrade minimum JDK version from 11 to 17 (#1079)
Update compiler source/target/release to 17 across build config
(pom.xml, bom), CI workflows, Docker images, Brewfile, and
documentation. Replace deprecated boxed-type constructors with valueOf()
in HolderReaderImpl codegen template to fix -Werror under release=17.

## What's Changed

JDK 11 would not be supported in some cases.

**This contains breaking changes.** <!-- Remove this line if there are
no breaking changes. -->

Closes #1078.